--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -4,37 +4,9 @@
 
       <div class="row">
         <div class="col-6 d-flex align-items-center">
-          <h6 class="mb-2">Cart Items </h6>
+          <h6 class="mb-0">Cart Items </h6>
         </div>
-        <!-- <div class="col-xl-6 mb-xl-0 mb-4">
-        <div class="card bg-transparent shadow-xl">
-          <div class="overflow-hidden position-relative border-radius-xl">
-            <img src="../../assets/img/illustrations/pattern-tree.svg"
-              class="position-absolute opacity-2 start-0 top-0 w-100 z-index-1 h-100" alt="pattern-tree">
-            <span class="mask bg-gradient-dark opacity-10"></span>
-            <div class="card-body position-relative z-index-1 p-3">
-              <i class="material-icons text-white p-2">wifi</i>
-              <h5 class="text-white mt-4 mb-5 pb-2">
-                4562&nbsp;&nbsp;&nbsp;1122&nbsp;&nbsp;&nbsp;4594&nbsp;&nbsp;&nbsp;7852</h5>
-              <div class="d-flex">
-                <div class="d-flex">
-                  <div class="me-4">
-                    <p class="text-white text-sm opacity-8 mb-0">Card Holder</p>
-                    <h6 class="text-white mb-0">Jack Peterson</h6>
-                  </div>
-                  <div>
-                    <p class="text-white text-sm opacity-8 mb-0">Expires</p>
-                    <h6 class="text-white mb-0">11/22</h6>
-                  </div>
-                </div>
-                <div class="ms-auto w-20 d-flex align-items-end justify-content-end">
-                  <img class="w-60 mt-2" src="../../assets/img/logos/mastercard.png" alt="logo">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+        <hr class="horizontal dark my-3">
         <div class="col-xl-12">
           <div class="row">
             <div class="col-md-3 col-6">
@@ -100,60 +72,135 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 mb-lg-0 mb-4">
-          <div class="card border card-plain border-radius-lg mt-4">
-            <div class="card-header pb-0 p-3">
-              <div class="row">
-                <div class="col-6 d-flex align-items-center">
-                  <h6 class="mb-0">Payment Method</h6>
-                </div>
-
-
-                <!-- id="pay-btn" -->
-
-                <!-- <a class="btn bg-gradient-dark mb-0" href="javascript:;" (click)="Payumoney()"><i
-                  class="material-icons text-sm">add</i>&nbsp;&nbsp;Pay Now</a> -->
-
-
-                <!-- <button type="button" (click)="SubmitBillingDetail()">PAY NOW</button> -->
-              </div>
-            </div>
-            <div class="card-body p-3">
-              <div class="row">
-                <div class="col-md-6 mb-md-0 mb-4">
-                  <div class="card card-body card-plain  d-flex align-items-center flex-row">
-                    <h6>Sub-Total:&nbsp;&nbsp;₹2200.00 </h6>
-                    <!-- <img class="w-10 me-3 mb-0" src="../../assets/img/logos/mastercard.png" alt="logo">
-                    <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;7852</h6> -->
-                    <!-- <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
-                      data-bs-placement="top" title="Edit Card">edit</i> -->
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="card card-body card-plain border-radius-lg d-flex align-items-center flex-row">
-                    <h6>Total:&nbsp;&nbsp;₹2200.00</h6>
-                    <!-- <img class="w-10 me-3 mb-0" src="../../assets/img/logos/visa.png" alt="logo">
-                    <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;5248</h6> -->
-                    <!-- <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
-                      data-bs-placement="top" title="Edit Card">edit</i> -->
-                  </div>
-                </div>
-                <!-- <button type="submit" (click)="Payumoney();"
-                  class="btn bg-gradient-primary w-100 mb-0">Checkout</button> -->
-                <div class="col-12 text-center">
-                  <!-- <a class="btn bg-gradient-dark mb-0" (click)="Payumoney();"><i
-                      class="material-icons text-sm w-100">add</i>&nbsp;&nbsp;Checkout</a> -->
-                  <button type="submit" (click)="Payumoney();"
-                    class="btn bg-gradient-primary w-100 mb-0">Checkout</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
   <div class="col-lg-4">
+    <div class="card h-100">
+      <div class="card-header pb-0 p-3">
+        <div class="row">
+          <div class="col-6 d-flex align-items-center">
+            <h6 class="mb-0">Payment</h6>
+          </div>
+          <hr class="horizontal dark my-3">
+          <!-- <div class="col-6 text-end">
+            <button class="btn btn-outline-primary btn-sm mb-0">View All</button>
+          </div> -->
+        </div>
+      </div>
+      <div class="card-body p-3 pt-0">
+        <ul class="list-group">
+          <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="mb-1 text-dark font-weight-bold text-sm">Sub-Total</h6>
+              <!-- <span class="text-xs">#MS-415646</span> -->
+            </div>
+            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
+              + ₹ 1,500
+            </div>
+          </li>
+          <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="mb-1 text-dark font-weight-bold text-sm">GST @18%</h6>
+              <!-- <span class="text-xs">#MS-415646</span> -->
+            </div>
+            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
+              + ₹ 270
+            </div>
+          </li>
+          <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="text-dark mb-1 font-weight-bold text-sm">Discount</h6>
+              <span class="text-xs"></span>
+            </div>
+            <div class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold">
+              - ₹ 500
+            </div>
+          </li>
+          <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="text-dark mb-1 font-weight-bold text-sm">Total</h6>
+              <span class="text-xs"></span>
+            </div>
+            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
+              + ₹ 1,270
+            </div>
+          </li>
+          <!-- <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="text-dark mb-1 font-weight-bold text-sm">April, 05, 2020</h6>
+              <span class="text-xs">#FB-212562</span>
+            </div>
+            <div class="d-flex align-items-center text-sm">
+              ₹560
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+            </div>
+          </li>
+          <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="text-dark mb-1 font-weight-bold text-sm">June, 25, 2019</h6>
+              <span class="text-xs">#QW-103578</span>
+            </div>
+            <div class="d-flex align-items-center text-sm">
+              ₹120
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+            </div>
+          </li>
+          <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
+            <div class="d-flex flex-column">
+              <h6 class="text-dark mb-1 font-weight-bold text-sm">March, 01, 2019</h6>
+              <span class="text-xs">#AR-803481</span>
+            </div>
+            <div class="d-flex align-items-center text-sm">
+              ₹300
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+            </div>
+          </li> -->
+        </ul>
+        <div class="col-12 text-center">
+          <button type="submit" (click)="Payumoney();" class="btn bg-gradient-primary w-100 mb-0">Pay Now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-7 mt-4">
+    <div class="card h-100">
+      <div class="card-header pb-0 px-3">
+        <h6 class="mb-0">Billing Information</h6>
+      </div>
+      <div class="card-body pt-4 p-3">
+        <ul class="list-group">
+          <li class="list-group-item border card-plain border-radius-lg d-flex p-4 mb-2 " *ngFor="let bill of bills">
+            <div class="d-flex flex-column">
+              <h6 class="mb-3 text-sm">{{bill?.durationdays}} Days | {{bill?.service}} service</h6>
+              <span class="mb-2 text-xs">Service: <span
+                  class="text-dark font-weight-bold ms-sm-2">{{bill?.service}}</span></span>
+              <span class="mb-2 text-xs">Email Address: <span
+                  class="text-dark ms-sm-2 font-weight-bold">{{bill?.billingfor.email}}</span></span>
+              <span class="mb-2 text-xs">Status: <span
+                  class="text-dark ms-sm-2 font-weight-bold">{{bill?.status}}</span></span>
+              <span class="text-xs">Date: <span class="text-dark ms-sm-2 font-weight-bold">{{bill?.createdAt |
+                  date:'short'}}</span></span>
+            </div>
+            <div class="ms-auto text-end">
+              <a class="btn btn-link text-gradient px-3 mb-0"
+                [ngClass]="bill?.status == 'pending'?'text-danger':'text-success'"
+                href="javascript:;">{{bill?.status}}</a>
+              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">delete</i>Delete</a>
+              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;">₹ {{bill?.price | number: '1.2-2'}}</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-5 mt-4">
     <div class="card h-100">
       <div class="card-header pb-0 p-3">
         <div class="row">
@@ -228,73 +275,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-7 mt-4">
-    <div class="card h-100">
-      <div class="card-header pb-0 px-3">
-        <h6 class="mb-0">Billing Information</h6>
-      </div>
-      <div class="card-body pt-4 p-3">
-        <ul class="list-group">
-          <li class="list-group-item border card-plain border-radius-lg d-flex p-4 mb-2 " *ngFor="let bill of bills">
-            <div class="d-flex flex-column">
-              <h6 class="mb-3 text-sm">{{bill?.durationdays}} Days | {{bill?.service}} service</h6>
-              <span class="mb-2 text-xs">Service: <span
-                  class="text-dark font-weight-bold ms-sm-2">{{bill?.service}}</span></span>
-              <span class="mb-2 text-xs">Email Address: <span
-                  class="text-dark ms-sm-2 font-weight-bold">{{bill?.billingfor.email}}</span></span>
-              <span class="mb-2 text-xs">Status: <span
-                  class="text-dark ms-sm-2 font-weight-bold">{{bill?.status}}</span></span>
-              <span class="text-xs">Date: <span class="text-dark ms-sm-2 font-weight-bold">{{bill?.createdAt |
-                  date:'short'}}</span></span>
-            </div>
-            <div class="ms-auto text-end">
-              <a class="btn btn-link text-gradient px-3 mb-0"
-                [ngClass]="bill?.status == 'pending'?'text-danger':'text-success'"
-                href="javascript:;">{{bill?.status}}</a>
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;">₹ {{bill?.price | number: '1.2-2'}}</a>
-            </div>
-          </li>
-          <!-- <li class="list-group-item border-0 d-flex p-4 mb-2 mt-3 bg-gray-100 border-radius-lg">
-            <div class="d-flex flex-column">
-              <h6 class="mb-3 text-sm">Lucas Harper</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Stone Tech
-                  Zone</span></span>
-              <span class="mb-2 text-xs">Email Address: <span
-                  class="text-dark ms-sm-2 font-weight-bold">lucas@stone-tech.com</span></span>
-              <span class="text-xs">VAT Number: <span
-                  class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
-            </div>
-            <div class="ms-auto text-end">
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">edit</i>Edit</a>
-            </div>
-          </li>
-          <li class="list-group-item border-0 d-flex p-4 mb-2 mt-3 bg-gray-100 border-radius-lg">
-            <div class="d-flex flex-column">
-              <h6 class="mb-3 text-sm">Ethan James</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Fiber
-                  Notion</span></span>
-              <span class="mb-2 text-xs">Email Address: <span
-                  class="text-dark ms-sm-2 font-weight-bold">ethan@fiber.com</span></span>
-              <span class="text-xs">VAT Number: <span
-                  class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
-            </div>
-            <div class="ms-auto text-end">
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">edit</i>Edit</a>
-            </div>
-          </li> -->
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-5 mt-4">
+  <div class="col-md-4 mt-4">
     <div class="card h-100 mb-4">
       <div class="card-header pb-0 px-3">
         <div class="row">
