--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -84,7 +84,7 @@
       <li class="nav-item">
         <a class="nav-link text-white" routerLink="/billing" routerLinkActive="active bg-gradient-primary">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">receipt_long</i>
+            <i class="material-icons opacity-10">credit_card</i>
           </div>
           <span class="nav-link-text ms-1">Billing</span>
         </a>
