--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -95,8 +95,8 @@
               <h6 class="mb-1 text-dark font-weight-bold text-sm">Sub-Total</h6>
               <!-- <span class="text-xs">#MS-415646</span> -->
             </div>
-            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
-              + ₹ 1,500
+            <div class="d-flex align-items-center text-dark text-gradient text-sm font-weight-bold">
+              ₹ 1,500.00
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
@@ -104,8 +104,8 @@
               <h6 class="mb-1 text-dark font-weight-bold text-sm">GST @18%</h6>
               <!-- <span class="text-xs">#MS-415646</span> -->
             </div>
-            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
-              + ₹ 270
+            <div class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold">
+              + ₹ 270.00
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
@@ -113,8 +113,8 @@
               <h6 class="text-dark mb-1 font-weight-bold text-sm">Discount</h6>
               <span class="text-xs"></span>
             </div>
-            <div class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold">
-              - ₹ 500
+            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
+              - ₹ 500.00
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-1 border-radius-lg">
@@ -122,8 +122,8 @@
               <h6 class="text-dark mb-1 font-weight-bold text-sm">Total</h6>
               <span class="text-xs"></span>
             </div>
-            <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
-              + ₹ 1,270
+            <div class="d-flex align-items-center text-dark text-gradient text-sm font-weight-bold">
+              ₹ 1,270.00
             </div>
           </li>
           <!-- <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
