--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,51 +1,51 @@
 <aside
-  class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl shadow my-2 fixed-start ms-2  bg-gradient-dark"
+  class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl shadow my-2 fixed-start ms-2  bg-gradient-white"
   id="sidenav-main">
   <div class="sidenav-header">
-    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+    <i class="fas fa-times p-3 cursor-pointer text-dark opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
       aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="" target="_blank">
       <img src="../../assets/img/logo-black.png" class="navbar-brand-img h-100" alt="main_logo">
-      <span class="ms-1 font-weight-bold text-white">VoiceTech Dashboard</span>
+      <span class="ms-1 font-weight-bold text-dark">VoiceTech Dashboard</span>
     </a>
   </div>
   <hr class="horizontal light mt-0 mb-2">
   <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-white " routerLink="/dashboard" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark " routerLink="/dashboard" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">dashboard</i>
           </div>
-          <span class="nav-link-text ms-1">Dashboard <span
+          <span class="nav-link-text font-weight-bold ms-1">Dashboard <span
               class="text-white p-1 bg-gradient-primary shadow-primary border-radius-lg">New!</span></span>
         </a>
       </li>
       <!-- <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/table" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/table" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">table_view</i>
           </div>
           <span class="nav-link-text ms-1">Tables</span>
         </a>
       </li> -->
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/total-calls" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/total-calls" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">call</i>
           </div>
-          <span class="nav-link-text ms-1">Total Calls <span *ngIf="allcalls?.length"
+          <span class="nav-link-text  font-weight-bold ms-1">Total Calls <span *ngIf="allcalls?.length"
               class="text-white p-1 bg-gradient-dark shadow-dark  border-radius-lg">{{allcalls?.length}}</span>
           </span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/outgoing-calls" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/outgoing-calls" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">call_made</i>
           </div>
-          <span class="nav-link-text ms-1">Outgoing Calls <span *ngIf="allcalllogs?.length"
+          <span class="nav-link-text font-weight-bold ms-1">Outgoing Calls <span *ngIf="allcalllogs?.length"
               class="text-white p-1 bg-gradient-warning shadow-primary border-radius-lg">{{allcalllogs?.length}}</span>
 
           </span>
@@ -53,56 +53,56 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/incoming-calls" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/incoming-calls" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">call_received</i>
           </div>
-          <span class="nav-link-text ms-1">Incoming Calls <span *ngIf="allreceived?.length"
+          <span class="nav-link-text font-weight-bold ms-1">Incoming Calls <span *ngIf="allreceived?.length"
               class="text-white p-1 bg-gradient-success shadow-primary border-radius-lg">{{allreceived?.length}}</span></span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/missed-calls" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/missed-calls" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">phone_missed</i>
           </div>
-          <span class="nav-link-text ms-1">Missed Calls <span *ngIf="allmissed?.length"
+          <span class="nav-link-text font-weight-bold ms-1">Missed Calls <span *ngIf="allmissed?.length"
               class="text-white p-1 bg-gradient-info shadow-info border-radius-lg">{{allmissed?.length}}</span></span>
         </a>
       </li>
 
 
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/plans" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/plans" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">receipt_long</i>
           </div>
-          <span class="nav-link-text ms-1">Plans</span>
+          <span class="nav-link-text font-weight-bold ms-1">Plans</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="/billing" routerLinkActive="active bg-gradient-primary">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLink="/billing" routerLinkActive="active bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">credit_card</i>
           </div>
-          <span class="nav-link-text ms-1">Billing</span>
+          <span class="nav-link-text font-weight-bold ms-1">Billing</span>
         </a>
       </li>
       <!-- <li class="nav-item">
-        <a class="nav-link text-white" routerLinkActive="active bg-gradient-primary" routerLink="/notifications">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark" routerLinkActive="active bg-gradient-primary" routerLink="/notifications">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">notifications</i>
           </div>
           <span class="nav-link-text ms-1">Notifications</span>
         </a>
       </li> -->
       <li class="nav-item mt-3">
-        <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
+        <h6 class="ps-4 ms-2 text-uppercase text-xs text-dark font-weight-bolder opacity-8">Account pages</h6>
       </li>
       <!-- <li class="nav-item">
-        <a class="nav-link text-white " routerLinkActive="active bg-gradient-primary" routerLink="/profile">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark " routerLinkActive="active bg-gradient-primary" routerLink="/profile">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">person</i>
           </div>
           <span class="nav-link-text ms-1">Profile</span>
@@ -110,28 +110,28 @@
       </li> -->
 
       <li class="nav-item">
-        <a class="nav-link text-white " routerLinkActive="active bg-gradient-primary" routerLink="/messages">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark " routerLinkActive="active bg-gradient-primary" routerLink="/messages">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">email</i>
           </div>
-          <span class="nav-link-text ms-1">Support <span *ngIf="unreadmsgs"
-              class="text-dark p-1 bg-gradient-light shadow-light border-radius-lg">{{unreadmsgs}}</span></span>
+          <span class="nav-link-text font-weight-bold ms-1">Support <span *ngIf="unreadmsgs"
+              class="text-white p-1 bg-gradient-light shadow-light border-radius-lg">{{unreadmsgs}}</span></span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white " routerLinkActive="active bg-gradient-primary" routerLink="/setting">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark " routerLinkActive="active bg-gradient-primary" routerLink="/setting">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">settings</i>
           </div>
-          <span class="nav-link-text ms-1">Setting</span>
+          <span class="nav-link-text font-weight-bold ms-1">Setting</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white " routerLinkActive="active bg-gradient-primary" (click)="logout()">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+        <a class="nav-link text-dark " routerLinkActive="active bg-gradient-primary" (click)="logout()">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">login</i>
           </div>
-          <span class="nav-link-text ms-1">Logout</span>
+          <span class="nav-link-text font-weight-bold ms-1">Logout</span>
         </a>
       </li>
     </ul>
